# py-net-mgmt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example_usage.py  overview.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design_overview.md  developer_guide.md  relational_migration_plan.md  user_guide.md  vision.md
generated-docs/: README.md
generated-docs/bridge_domains/: BD_DMZ.md  BD_Prod.md  README.md
generated-docs/datacenters/: DC_Frankfurt.md  README.md  global.md
generated-docs/environments/: README.md
generated-docs/epgs/: EPG_App.md  EPG_FrontEnd.md  EPG_Web.md  README.md
generated-docs/networks/: README.md  backend_net.md  dmz_net.md  example_net.md  global-ovn-cluster.md  second_net.md
generated-docs/zones/: README.md  Trusted.md  Untrusted.md  global.md
networks/: backend_net.yaml  dmz_net.yaml  example_net.yaml  global-ovn-cluster.yaml  second_net.yaml
networks/bridge_domains/: BD_DMZ.yaml  BD_Prod.yaml
networks/epgs/: EPG_App.yaml  EPG_FrontEnd.yaml  EPG_Web.yaml
networks/networks/: backend_net.yaml  dmz_net.yaml  example_net.yaml  global-ovn-cluster.yaml  second_net.yaml
src/net_mgmt/: __init__.py  cli.py  core.py  db.py  jinja.py  loader.py  migrate.py  reports.py
tests/: test_cli_add_allocation.py  test_cli_add_range_allocation.py  test_cli_list.py  test_cli_markdown_output.py  test_cli_output_order.py  test_cli_show.py  test_core.py  test_db.py  test_find_allocate.py  test_jinja.py  test_loader.py  test_markdown_usage.py  test_query.py  test_relational.py  test_templates.py
(+13 files in other folders)
